debug pixel | styles

--- a/fundamentos/index.html
+++ b/fundamentos/index.html
@@ -7,6 +7,7 @@
     <title>Fundamentos</title>
     <script src="js/three.js"></script>
     <script src="src/index.js" type="module"></script>
+    <link rel="stylesheet" href="css/styel.css" />
   </head>
   <body></body>
 </html>
